# moodle-report-portfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: main.rs
src/auth/: client.rs  cookies.rs  login.rs  mod.rs
src/class/: attendance.rs  classbook.rs  course.rs  mod.rs
src/common/: tables.rs
src/excel/: process.rs
src/utils/: config.rs  logger.rs  mod.rs  replacement.rs
