[package]
name = "moodle-report-portfolio"
version = "0.1.0"
edition = "2021"
authors = ["Marvin Juraschka <info@ccmvn.co>"]
repository = "https://github.com/ccmvn/moodle-report-portfolio"

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "gzip", "cookies"] }
reqwest_cookie_store = "0.6.0"
tokio = { version = "1.34.0", features = ["full"] }
scraper = "0.18.1"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"
log = "0.4.20"
env_logger = "0.10.1"
lazy_static = "1.4.0"
regex = "1.10.2"
futures = "0.3.29"
chrono = "0.4.31"
xlsxwriter = "0.6.0"
html-escape = "0.2.13"
linked_hash_set = "0.1.4"
